docs(profiling): fix the prose siblings the measurements left behind
#776 replaced three expectations with measurements and corrected the
docs. It did not correct the code comments asserting the same things,
which is the sibling site a maintainer reaches first.

ProfilingConfiguration called the musl failure and the perf_event_open
refusal "precisely the untested case" after both had been measured and
neither occurred. A second comment still stated that only `cpu` reaches
perf_event_open "and only that case can be refused by a hardened unit
file" -- the refusal half was never measured and does not hold: on a
real deployment under the shipped unit at perf_event_paranoid=4, cpu
started and produced correctly attributed samples. Both now record what
was measured, and the isStarted guard's comment says why it stays
anyway: it costs one call and the failures it catches are silent.

The --enable-native-access remedy was given only as JAVA_OPTS, which the
container never sees. Verified rather than reasoned: the deb/rpm unit
expands $JAVA_OPTS, but the image has an exec-form ENTRYPOINT with no
shell, so a container operator following that instruction on a future
JDK would lose profiling and see no effect. Measured on
eclipse-temurin:25-alpine, exec-form java:

  JDK_JAVA_OPTIONS=-Dprobe.marker=yes -> "Picked up JDK_JAVA_OPTIONS",
                                          probe.marker = yes
  JAVA_OPTS=-Dprobe.marker=yes        -> 0 occurrences

Both forms are now given, with which one applies where.

Finally, "the remedy needs two variables" had lost its antecedent once
the preceding paragraph started saying musl profiles correctly, and the
section heading's promise -- what to do when a profile looks wrong -- no
longer paid off. The JFR paragraph now names the condition it answers,
and the musl limit says plainly that frames which cannot be real are
still worth suspecting the unwinder for.

Verified: mvn clean verify -> BUILD SUCCESS, 1852 tests. Docs checked
against the re